# doxygen2docset

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE.md  README.md  doxygen2docset.sublime-project
.circleci/: config.yml
source/: CMakeLists.txt  builder.cc  builder.h  definition_parser.cc  definition_parser.h  docset_index.cc  docset_index.h  file.cc  file.h  html_parser.cc  html_parser.h  logger.h  macros.h  main.cc  plist_parser.cc  plist_parser.h  token.cc  token.h  token_parser.cc  token_parser.h
tests/: CMakeLists.txt  doxygen2docset_unittests.cc  fixture.h.in  test_main.cc
tests/fixtures/: Info.plist  classflutter_1_1_shell.html
